# LIS3DH-Pico

./: CMakeLists.txt  README.md  lis3dh.cpp  lis3dh.hpp
examples/: CMakeLists.txt  poll_data.cpp
